fix address builder overflow

--- a/frontend/src/modules/interactions/components/ValueBuilder/AddressBuilder/AddressBuilder.module.scss
+++ b/frontend/src/modules/interactions/components/ValueBuilder/AddressBuilder/AddressBuilder.module.scss
@@ -7,7 +7,6 @@ $avatar-size: 30px;
 
 .root {
   width: 100%;
-  overflow-x: scroll;
   background: $gray-80;
   border-radius: $border-radius-input;
 
@@ -15,6 +14,7 @@ $avatar-size: 30px;
 
   .innerWrapper {
     display: flex;
+    flex-wrap: wrap;
     column-gap: $spacing-base;
     row-gap: $spacing-base;
     padding: $spacing-base;
